MODSCHED-8: fix code smells